fix: ios issue withs stretch images

--- a/src/components/organisms/branch/branches.scss
+++ b/src/components/organisms/branch/branches.scss
@@ -32,6 +32,7 @@
     overflow: hidden;
     margin: 0px;
     padding: 0px;
+    width: 100vw;
     /* uncomment these lines if you want to have the standard Trello behavior instead of the column wrapping */
     /*   grid-auto-flow: column;
       grid-auto-columns: minmax(260px, 1fr); */
